Fix semantics of WEBKIT_WEBGL_lose_context https://bugs.webkit.org/show_bug.cgi?id=75053

Reviewed by James Robinson.

Source/WebCore:

Updated WEBGL_lose_context extension to match WebGL spec's
behavior:

  - loseContext() causes the context to be lost immediately, but
    the webglcontextlost event isn't dispatched until JavaScript
    returns.
  - restoreContext() may only be called once dispatch of the
    webglcontextlost event has completed, *and* if that event handler
    prevented the default behavior of the event.
  - restoreContext() performs its work asynchronously. The context
    is not restored until just before the webglcontextrestored event
    is dispatched.

* html/canvas/WebGLRenderingContext.cpp:
(WebCore::WebGLRenderingContext::WebGLRenderingContext):
(WebCore::WebGLRenderingContext::forceLostContext):
(WebCore::WebGLRenderingContext::forceRestoreContext):
(WebCore::WebGLRenderingContext::dispatchContextLostEvent):
(WebCore::WebGLRenderingContext::maybeRestoreContext):
* html/canvas/WebGLRenderingContext.h:

LayoutTests:

Updated context-lost and context-lost-restored tests to latest
versions in Khronos repository. Updated WebGLContextEvent.html to
match new semantics.

* fast/canvas/webgl/WebGLContextEvent-expected.txt:
* fast/canvas/webgl/WebGLContextEvent.html:
* fast/canvas/webgl/context-lost-expected.txt:
* fast/canvas/webgl/context-lost-restored-expected.txt:
* fast/canvas/webgl/context-lost-restored.html:
* fast/canvas/webgl/context-lost.html:

Canonical link: https://commits.webkit.org/92353@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@104102 268f45cc-cd09-0410-ab3c-d52691b4dbfc